--- a/index.html
+++ b/index.html
@@ -10,187 +10,188 @@
 <body>
 
   <div class="my_social">
-      <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
-          <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
-        </a>
-      <a href="https://stewilondanga.github.io/" class="social">
-          <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
-        </a>
-      <a href="https://twitter.com/stew_ilondanga" class="social">
-          <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
-        </a>
-    </div>
+    <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
+      <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
+    </a>
+    <a href="https://stewilondanga.github.io/" class="social">
+      <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
+    </a>
+    <a href="https://twitter.com/stew_ilondanga" class="social">
+      <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
+    </a>
+  </div>
 
-    <div class="container">
-    	<div class="row">
-    		<div class="letter color-0 rotateX">T</div>
-    		<div class="letter color-1 rotateY">R</div>
-    		<div class="letter color-2 rotateZ">A</div>
-    		<div class="letter color-3 skewX">N</div>
-    		<div class="letter color-4 skewY">S</div>
-    		<div class="letter color-5 skew">F</div>
-    		<div class="letter color-6 scaleX">O</div>
-    		<div class="letter color-7 scaleY">R</div>
-    		<div class="letter color-8 scaleZ">M</div>
-    	</div>
-    	<div class="row">
-    		<div class="code">rotateX(45deg)</div>
-    		<div class="code">rotateY(45deg)</div>
-    		<div class="code">rotateZ(45deg)</div>
-    		<div class="code">skewX(15deg)</div>
-    		<div class="code">skewY(45deg)</div>
-    		<div class="code">skew(15deg, 45deg)</div>
-    		<div class="code">scaleX(0.75)</div>
-    		<div class="code">scaleY(0.75)</div>
-    		<div class="code">scaleZ(0.75)</div>
-    	</div>
-    	<article>
-    			Give your CSS depth using the transform property. <br/>Note: This does not work on inline elements.
-    	</article>
-    	<table>
-    		<thead>
-    			<tr>
-    				<th class="header">rotate</th>
-    				<th></th>
-    			</tr>
-    		</thead>
-    		<tbody>
-    			<tr>
-    				<td>rotate(angle)</td>
-    				<td>2D rotation of the element</td>
-    			</tr>
-    			<tr>
-    				<td>rotateX(angle)</td>
-    				<td>3D rotation along the x-axis</td>
-    			</tr>
-    			<tr>
-    				<td>rotateY(angle)</td>
-    				<td>3D rotation along the y-axis</td>
-    			</tr>
-    			<tr>
-    				<td>rotateZ(angle)</td>
-    				<td>3D rotation along the z-axis</td>
-    			</tr>
-    			<tr>
-    				<td>rotate3d(x, y, z, angle)</td>
-    				<td>3D rotation along the x, y and z axes</td>
-    			</tr>
-    		</tbody>
-    	</table>
-    	<table>
-    		<thead>
-    			<tr>
-    				<th class="header">skew</th>
-    				<th></th>
-    			</tr>
-    		</thead>
-    		<tbody>
-    			<tr>
-    				<td>skew(x-angle, y-angle)</td>
-    				<td>2D skew of the element along the x and y axes</td>
-    			</tr>
-    			<tr>
-    				<td>skewX(angle)</td>
-    				<td>2D skew along the x-axis</td>
-    			</tr>
-    			<tr>
-    				<td>skewY(angle)</td>
-    				<td>2D skew along the y-axis</td>
-    			</tr>
-    		</tbody>
-    	</table>
-    	<table>
-    		<thead>
-    			<tr>
-    				<th class="header">scale</th>
-    				<th></th>
-    			</tr>
-    		</thead>
-    		<tbody>
-    			<tr>
-    				<td>scale(x, y)</td>
-    				<td>2D scale of the element along the x and y axes</td>
-    			</tr>
-    			<tr>
-    				<td>scaleX(x)</td>
-    				<td>2D scale along the x-axis</td>
-    			</tr>
-    			<tr>
-    				<td>scaleY(y)</td>
-    				<td>2D scale along the y-axis</td>
-    			</tr>
-    			<tr>
-    				<td>scaleZ(z)</td>
-    				<td>3D scale along the z-axis</td>
-    			</tr>
-    			<tr>
-    				<td>scale3d(x, y, z)</td>
-    				<td>3D scale along the x, y and z axes.</td>
-    			</tr>
-    		</tbody>
-    	</table>
-    	<table>
-    		<thead>
-    			<tr>
-    				<th class="header">translate</th>
-    				<th></th>
-    			</tr>
-    		</thead>
-    		<tbody>
-    			<tr>
-    				<td>translate(x,y)</td>
-    				<td>2D movement of the element along the x and y axes</td>
-    			</tr>
-    			<tr>
-    				<td>translateX(x)</td>
-    				<td>2D movement along the x-axis</td>
-    			</tr>
-    			<tr>
-    				<td>translateY(y)</td>
-    				<td>2D movement along the y-axis</td>
-    			</tr>
-    			<tr>
-    				<td>translateZ(z)</td>
-    				<td>3D movement along the z-axis</td>
-    			</tr>
-    			<tr>
-    				<td>translate3d(x,y,z)</td>
-    				<td>3D movement along the x, y and z axes</td>
-    			</tr>
-    		</tbody>
-    	</table>
-    	<table>
-    		<thead>
-    			<tr>
-    				<th class="header">matrix</th>
-    				<th></th>
-    			</tr>
-    		</thead>
-    		<tbody>
-    			<tr>
-    				<td>matrix(n,n,n,n,n,n)</td>
-    				<td>All the 2D values above are internally converted to a matrix.<br/>You probably don't need to use it.</td>
-    			</tr>
-    			<tr>
-    				<td>matrix3d
-    (n,n,n,n,n,n,n,n,n,n,n,n,n,n,n,n)</td>
-    				<td>Same as matrix but for 3D transforms.</td>
-    			</tr>
-    		</tbody>
-    	</table>
+  <div class="container">
+    <div class="row">
+      <div class="letter color-0 rotateX">T</div>
+      <div class="letter color-1 rotateY">R</div>
+      <div class="letter color-2 rotateZ">A</div>
+      <div class="letter color-3 skewX">N</div>
+      <div class="letter color-4 skewY">S</div>
+      <div class="letter color-5 skew">F</div>
+      <div class="letter color-6 scaleX">O</div>
+      <div class="letter color-7 scaleY">R</div>
+      <div class="letter color-8 scaleZ">M</div>
     </div>
+    <div class="row">
+      <div class="code">rotateX(45deg)</div>
+      <div class="code">rotateY(45deg)</div>
+      <div class="code">rotateZ(45deg)</div>
+      <div class="code">skewX(15deg)</div>
+      <div class="code">skewY(45deg)</div>
+      <div class="code">skew(15deg, 45deg)</div>
+      <div class="code">scaleX(0.75)</div>
+      <div class="code">scaleY(0.75)</div>
+      <div class="code">scaleZ(0.75)</div>
+    </div>
+    <article>
+      Give your CSS depth using the transform property. <br />Note: This does not work on inline elements.
+    </article>
+    <table>
+      <thead>
+        <tr>
+          <th class="header">rotate</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>rotate(angle)</td>
+          <td>2D rotation of the element</td>
+        </tr>
+        <tr>
+          <td>rotateX(angle)</td>
+          <td>3D rotation along the x-axis</td>
+        </tr>
+        <tr>
+          <td>rotateY(angle)</td>
+          <td>3D rotation along the y-axis</td>
+        </tr>
+        <tr>
+          <td>rotateZ(angle)</td>
+          <td>3D rotation along the z-axis</td>
+        </tr>
+        <tr>
+          <td>rotate3d(x, y, z, angle)</td>
+          <td>3D rotation along the x, y and z axes</td>
+        </tr>
+      </tbody>
+    </table>
+    <table>
+      <thead>
+        <tr>
+          <th class="header">skew</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>skew(x-angle, y-angle)</td>
+          <td>2D skew of the element along the x and y axes</td>
+        </tr>
+        <tr>
+          <td>skewX(angle)</td>
+          <td>2D skew along the x-axis</td>
+        </tr>
+        <tr>
+          <td>skewY(angle)</td>
+          <td>2D skew along the y-axis</td>
+        </tr>
+      </tbody>
+    </table>
+    <table>
+      <thead>
+        <tr>
+          <th class="header">scale</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>scale(x, y)</td>
+          <td>2D scale of the element along the x and y axes</td>
+        </tr>
+        <tr>
+          <td>scaleX(x)</td>
+          <td>2D scale along the x-axis</td>
+        </tr>
+        <tr>
+          <td>scaleY(y)</td>
+          <td>2D scale along the y-axis</td>
+        </tr>
+        <tr>
+          <td>scaleZ(z)</td>
+          <td>3D scale along the z-axis</td>
+        </tr>
+        <tr>
+          <td>scale3d(x, y, z)</td>
+          <td>3D scale along the x, y and z axes.</td>
+        </tr>
+      </tbody>
+    </table>
+    <table>
+      <thead>
+        <tr>
+          <th class="header">translate</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>translate(x,y)</td>
+          <td>2D movement of the element along the x and y axes</td>
+        </tr>
+        <tr>
+          <td>translateX(x)</td>
+          <td>2D movement along the x-axis</td>
+        </tr>
+        <tr>
+          <td>translateY(y)</td>
+          <td>2D movement along the y-axis</td>
+        </tr>
+        <tr>
+          <td>translateZ(z)</td>
+          <td>3D movement along the z-axis</td>
+        </tr>
+        <tr>
+          <td>translate3d(x,y,z)</td>
+          <td>3D movement along the x, y and z axes</td>
+        </tr>
+      </tbody>
+    </table>
+    <table>
+      <thead>
+        <tr>
+          <th class="header">matrix</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>matrix(n,n,n,n,n,n)</td>
+          <td>All the 2D values above are internally converted to a matrix.<br />You probably don't need to use it.</td>
+        </tr>
+        <tr>
+          <td>matrix3d
+            (n,n,n,n,n,n,n,n,n,n,n,n,n,n,n,n)</td>
+          <td>Same as matrix but for 3D transforms.</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
   <section id="contact">
     <div class="overlay">
       <div class="containers">
 
         <h1>
-<script>
-with(new Date)c=-new Date(y=getFullYear(),m=getMonth()).getDay(x=new Date(y,++m,0).getDate(b=-1))
-h='<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 '+' '+y+'/'+m+'<tr>'+'SuMoTuWeThFrSa'.replace(/(..)/g,'<th>$1')
-while((b++>5?b=0:b)|c<x)h+=(b?'':'<tr>')+'<td>'+(++c<1|c>x?'-':c);document.write(h+'</table>')
-</script>
-</h1>
+          <script>
+            with(new Date) c = -new Date(y = getFullYear(), m = getMonth()).getDay(x = new Date(y, ++m, 0).getDate(b = -1))
+            h = '<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 ' + ' ' + y + '/' + m + '<tr>' + 'SuMoTuWeThFrSa'.replace(/(..)/g, '<th>$1')
+            while ((b++ > 5 ? b = 0 : b) | c < x) h += (b ? '' : '<tr>') + '<td>' + (++c < 1 | c > x ? '-' : c);
+            document.write(h + '</table>')
+          </script>
+        </h1>
 
       </div>
     </div>
